[project]
name = "hf-agents-gaia-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ffmpeg>=1.4",
    "gradio[oauth]>=5.27.0",
    "litellm==1.67.1",
    "numpy>=2.2.5",
    "openai>=1.76.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "smolagents[litellm]>=1.14.0",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
    "wikipedia-api>=0.8.1",
    "yt-dlp>=2025.3.31",
]
